--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-photo-view": "^1.2.2",
     "react-player": "^2.11.0",
+    "react-query": "^3.39.2",
     "react-timer-hook": "^3.0.5",
     "react-typed": "^1.2.0",
     "reactjs-popup": "^2.0.5",
