--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.3",
     "daisyui": "^2.27.0",
-    "firebase": "^9.9.2",
+    "firebase": "^9.12.1",
+    "moment": "^2.29.4",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-photo-view": "^1.2.2",
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
