--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
