--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.3",
+    "@hookform/resolvers": "^2.9.10",
     "add-to-calendar-button": "^1.18.3",
     "daisyui": "^2.27.0",
     "firebase": "^9.12.1",
@@ -19,6 +20,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.4",
     "react-icons": "^4.4.0",
     "react-photo-view": "^1.2.2",
     "react-player": "^2.11.0",
@@ -26,7 +28,8 @@
     "react-timer-hook": "^3.0.5",
     "react-typed": "^1.2.0",
     "reactjs-popup": "^2.0.5",
-    "swiper": "^8.3.2"
+    "swiper": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
