--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.4.0",
     "react-photo-view": "^1.2.2",
