--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-typed": "^1.2.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.4.3",
+    "sharp": "^0.31.3",
     "swiper": "^8.3.2",
     "uniqid": "^5.4.0",
     "yup": "^0.32.11"
