--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@dicebear/core": "^5.3.4",
     "@googlemaps/js-api-loader": "^1.14.3",
     "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-popover": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.3",
     "@sendgrid/mail": "^7.7.0",
@@ -26,6 +28,7 @@
     "firebase": "^9.12.1",
     "formidable": "^2.1.1",
     "iron-session": "^6.3.1",
+    "isomorphic-dompurify": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "next": "^12.3.1",
@@ -40,6 +43,7 @@
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
+    "react-markdown": "^8.0.5",
     "react-otp-input": "^2.4.0",
     "react-photo-view": "^1.2.2",
     "react-player": "^2.11.0",
@@ -49,6 +53,8 @@
     "react-typed": "^1.2.0",
     "reactjs-popup": "^2.0.5",
     "recharts": "^2.4.3",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "sharp": "^0.31.3",
     "swiper": "^8.3.2",
     "uniqid": "^5.4.0",
